--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,5 +2,14 @@
   "name": "illumeo-monorepo-backend",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^18.16.3",
+    "prisma": "^4.13.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@prisma/client": "4.13.0"
+  }
 }
