--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,11 +5,16 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.16.3",
+    "nodemon": "^2.0.22",
     "prisma": "^4.13.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@prisma/client": "4.13.0"
+    "@prisma/client": "4.13.0",
+    "@types/express": "^4.17.17",
+    "@types/nodemon": "^1.19.2",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
   }
 }
