--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/node": "^18.16.3",
     "nodemon": "^2.0.22",
     "prisma": "^4.13.0",
@@ -14,6 +15,7 @@
     "@prisma/client": "4.13.0",
     "@types/express": "^4.17.17",
     "@types/nodemon": "^1.19.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
   }
