--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,11 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "start": "npx nodemon server.ts",
+    "test": "jest"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.16.3",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prisma": "^4.13.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
@@ -17,6 +27,7 @@
     "@types/nodemon": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0"
   }
 }
